--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <h1>Weights </h1>
     <img class="equip" src="images/equipment1.jpg" alt="Weight Equipment" height="195" width="260">
-    <p>Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.Our facility includes a weight training area with several weight options.  </p>
+    <p>Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.</p>
     <ul>
       <li>Dumbbells</li>
       <li>Kettle bells</li>
