--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <div id="container">
     <!-- Use the header area for The website name and logo -->
     <header>
-        <a href="index.html"><img src="images\ffc_logo.png" alt="Forword Fitness Club logo" height="275" width="845"></a>
+        <a href="index.html"><img src="images\ffc_logo.png" alt="Forword Fitness Club logo"></a>
     </header>
 
     <!-- Use the now area to add hyperlinks to orther pages within the website -->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="class.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="contact.html">Contact Us</a> &nbsp; &nbsp;
+      <ul>
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a href="about.html">About Us</a> </li>
+        <li> <a href="class.html">Classes</a> </li>
+        <li> <a href="nutrition.html">Nutrition</a> </li>
+        <li> <a href="contact.html">Contact Us</a> </li>
+      </ul>
     </nav>
 
     <!-- Use the main area to add the main content of the webpage -->
@@ -28,9 +30,24 @@
 
       <p>Welcome to Forward Fitness Club. Our mission is to client meet their fitness and nutrition goals.</p>
 
+      <div class="mobile">
+        <h3>FREE one-Week Trial membership!</h3>
+        <p> <a href="tel: 0145559608">Call Us Today to Get Started</a> </p>
+
+        <h4>Fitness Club Hours:</h4>
+        <p>Monday - Thursday: 6:00am - 6:00pm <br>
+          Friday: 6:00am - 4:00pm <br>
+          Saturday: 8:00am - 6:00pm <br>
+          Sunday: Closed
+        </p>
+      </div>
+
+      <div class="desktop">
       <p>If you have struggled with getting healthy and need the motivation and resources to make a healthy lifetyle change, contact us today. Our facility includes state-of the art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.</p>
 
       <p>We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training Classes, and nutrition planning. Contact us today to strat your free trial!</p>
+
+    </div>
 
     </main>
 
