--- a/about.html
+++ b/about.html
@@ -11,42 +11,44 @@
     <div id="container">
     <!-- Use the header area for The website name and logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Forword Fitness Club logo" height="275" width="845"></a>
+      <a href="index.html"><img src="images/ffc_logo.png" alt="Forword Fitness Club logo" ></a>
     </header>
 
     <!-- Use the now area to add hyperlinks to orther pages within the website -->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="class.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="contact.html">Contact Us</a> &nbsp; &nbsp;
+      <ul>
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a href="about.html">About Us</a> </li>
+        <li> <a href="class.html">Classes</a> </li>
+        <li> <a href="nutrition.html">Nutrition</a> </li>
+        <li> <a href="contact.html">Contact Us</a> </li>
+      </ul>
     </nav>
 
     <!-- Use the main area to add the main content of the webpage -->
     <main>
 
     <h1>Weights </h1>
-    <img class="equip" src="images/equipment1.jpg" alt="Weight Equipment" height="195" width="260">
+    <img class="equip" src="images/equipment1.jpg" alt="Weight Equipment" >
     <p>Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.</p>
     <ul>
       <li>Dumbbells</li>
       <li>Kettle bells</li>
       <li>Barbells</li>
-    </ul><br>
+    </ul>
 
     <h1>Cardio</h1>
-    <img class="equip" src="images/equipment2.jpg" alt="Cardio Equipment" height="195" width="260">
+    <img class="equip" src="images/equipment2.jpg" alt="Cardio Equipment" >
     <p>Burn fat through cardio workouts. If you need to lose 20 lbs or more, include at least 30 minutes of cardio each day.
     We have several equipment choices for your workout.</p>
     <ul>
       <li>Treadmills</li>
       <li>Elliptical Machines</li>
       <li>Exercise Bikes</li>
-    </ul><br>
+    </ul>
 
     <h1>Personal Training</h1>
-    <img class="equip" src="images/equipment3.jpg" alt="Personal Training" height="195" width="260">
+    <img class="equip" src="images/equipment3.jpg" alt="Personal Training" >
     <p>Our certied personal trainers work with you one on one to help you obtain your tness goals. Our personal trainers
     keep you motivated and push you farther than you would push yourself. When you feel like you cannot do one more
     rep, they tell you that you can. Personal training has many benets.</p>
@@ -54,7 +56,7 @@
       <li>Accountability</li>
       <li>Personalized Program</li>
       <li>Consistent Support and Motivation</li>
-    </ul><br>
+    </ul>
 
    <h1>Common Exercises</h1>
    <p>The following are common exercises that we encourage our clients to do as part of their daily exercise routine.</p>
@@ -65,11 +67,11 @@
 
       <dt>Plank</dt>
       <dd>Planks build your core strength. To perform a plank, get in a push up position and rest your forearms on the floor. Hold the position as long as you can.
-        <br></dd>
+        </dd>
 
          <dt>Mountain Climber</dt>
          <dd>Mountain climbers are a good cardio exercise. Place your hands on the floor in a push up position, then bring one knee up to your chest and then switch as quickly as you can (as though you are climbing a mountain).
-           <br></dd>
+           </dd>
          </dl>
 
         <p>For more information about how to stay active, visit <a href=”http://www.fitness.gov/be-active/ways-to-be -active/”>fitness.gov</a>.</p>
@@ -77,7 +79,7 @@
     <!-- Use the footer area to add webpage -->
     </main>
   <footer>
-    &copy; copyright 2019. All Rights Reserved.<br>
+    &copy; copyright 2019. All Rights Reserved.
     <a href="mailto:forwardfitness@club.net">Forwardfitness@club.net</a>
   </footer>
 </div>
