--- a/contact.html
+++ b/contact.html
@@ -5,22 +5,25 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Forword Fitness Club</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 
     <div id="container">
     <!-- Use the header area for The website name and logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Forword Fitness Club logo" height="275" width="845"></a>
+      <a href="index.html"><img src="images/ffc_logo.png" alt="Forword Fitness Club logo" ></a>
     </header>
 
     <!-- Use the now area to add hyperlinks to orther pages within the website -->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="class.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="contact.html">Contact Us</a> &nbsp; &nbsp;
+      <ul>
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a href="about.html">About Us</a> </li>
+        <li> <a href="class.html">Classes</a> </li>
+        <li> <a href="nutrition.html">Nutrition</a> </li>
+        <li> <a href="contact.html">Contact Us</a> </li>
+      </ul>
     </nav>
 
     <!-- Use the main area to add the main content of the webpage -->
@@ -33,6 +36,7 @@
 
       <p>Phone Number :<br>
         <a class="mobile" href="tel:8145559608"> (814)555-9608</a></p>
+        <span class="desktop"> (814)555-9608 </span> </p>
 
         <p>Email Address :<br>
           <a href="mailto:forwardfitness@club.net">Forwardfitness@club.net</a></p>
